@@ -4,6 +4,7 @@
   * Added css selector support for SelectList and Div
   * Added ability to pass clasname as string to visit_page, on_page, and if_page methods
   * Added params class instance variable to hold hash values that can be used in the page
+  * Added ability to insert ERB into page_url string and have it access params
 
 === Version 0.7.4 / 2012-9-8
 * Enhancements
